prevent text wrapping on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -49,9 +49,12 @@ h1 {
 
 p {
   font-family: verdana;
-  font-size: 1.5em;
+  font-size: 1.5vw;
   text-align: center;
   vertical-align: middle;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .logo-container {
@@ -87,7 +90,7 @@ p {
   }
 
   p {
-    font-size: 2.1em;
+    font-size: 2.1vw;
   }
 
   .logo {
